[package]
name = "hyperdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "daemonlib"
path = "src/lib.rs"


[dependencies]
clap = { version = "3.1.12", features = ["derive"] }
tracing-subscriber = "0.3.11"
tracing = "0.1.34"
dbconnector = {version = "0.1.0", path = "./dbconnector"}